apps/base/rtmp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rtmp
  namespace: rtmp
spec:
  type: ClusterIP
  selector:
    app: nginx-rtmp
  ports:
    - name: rtmp
      port: 1935
      targetPort: rtmp
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: rtmp
  namespace: rtmp
spec:
  entryPoints:
    - rtmp
  routes:
    - rule: "HostSNI(`*`)"
      services:
        - name: rtmp
          port: 1935
